# driverless_car_hobby_project

./: .gitignore  CMakeLists.txt  CMakeLists_old.txt  CMakeLists_working_old.txt  README.md
clientApp/: CMakeLists.txt  client.cpp
include/: autoDrive.h  calibParams.h  carTracker.h  contourDetector.h  dashboardTracker.h  lineDetector.h  mainwindow.h  mainwindow.ui  objectDetector.h  opencv_api_calls.h  pch.h  pch2.h  server.h  trafficDetector.h  ui_mainwindow.h
include_/: calibParams.h  lineDetector.h  objectDetector.h  trafficDetector.h
src/: AutoDriveTest.cpp  CMakeLists.txt  CMakeLists_src_direc.txt  DashboardTrackerRun.cpp  DashboardTrackerTest.cpp  LineDetectionTest.cpp  autoDrive.cpp  calibParams.cpp  carTracker.cpp  contourDetector.cpp  dashboardTracker.cpp  lineDetector.cpp  main.cpp  mainwindow.cpp  objectDetector.cpp  opencv_api_calls.cpp  resources.qrc  server.cpp  trafficDetector.cpp
src_/: DashboardTrackerTest.cpp  carTracker.cpp  dashboardTracker.cpp  lineDetector.cpp  main.cpp  objectDetector.cpp  trafficDetector.cpp
tst/: CMakeLists.txt  OpenCV_API_Static_Global_Functions_Tests.cpp  fixture_tests.cpp  fixture_tests.h  main.cpp  parameterised_tests.cpp  parameterised_tests.h
